--- a/selectabull/src/App.css
+++ b/selectabull/src/App.css
@@ -36,7 +36,7 @@
   margin: 50px;
 }
 
-.dropdown-content {
+.dropdown-heifers {
   display: none;
   position: absolute;
   background-color: #f1f1f1;
@@ -45,15 +45,34 @@
   z-index: 1;
 }
 
-.dropdown-content a {
+
+.dropdown-bulls {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-heifers a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
 
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-bulls a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
 
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown-heifers a:hover {background-color: #ddd;}
+.dropdown-bulls a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-heifers {display: block;}
+.dropdown:hover .dropdown-bulls {display: block;}
 
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
