--- a/selectabull/src/App.css
+++ b/selectabull/src/App.css
@@ -5,7 +5,11 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 60vmin;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
 
 .App-header {
@@ -19,17 +23,21 @@
   color: white;
 }
 
-.App-link {
-  color: #09d3ac;
-}
-
 h3 {
-  color: white;
+  color: black;
+  text-align: center;
 }
-
+h1 {
+  text-align: center;
+}
 label {
   color: black;
   margin-left: 30 px;
+  
+}
+
+.dropdown {
+display: inline-block;
 }
 
 
